  and limit to max 1/24 of the delay for delay greater than a day.
  This would keep enough delay randomization to avoid mass agent server connection and
  keep next seen run more coherent with the requested delay.
* fix service shutdown when HTTP client close the connection before the agent
* fix HTTP server keep-alive support with a 8 requests by connection maximum limit

inventory:
* unix: fix last log user after a reboot
* added Samsung monitor serial support for models: B1940MR, B1940W, S22A450BW,
  S22B420, S22E450, S22F350FHU, S27D390H, S27D850T, S27H850QFU, S19A450, SM943BM,
  S22C450, S27H650FDU
* macosx:
 - fix monitors inventory using ioreg as it provides EDID block from monitors
 - fix few perl error messages on exotic cases
* win32: fix hyperv host wasn't filtered from installed virtual machines
* win32: fix Adobe key detection, thanks to PR-gh
* Megacli storage support update, thanks to po1vo
* linux: Added macvlan/docker network interfaces support, thanks to po1vo
* win32: fix firewall inventory cases, thanks to PR-gh
* win32: fix Office license inventory, thanks to PR-gh
* win32: enhanced network card inventory, thanks to PR-gh
* linux: provides debian installed software filesize in bytes
* linux: Added support for installed softwares by Snap
* linux: double-check a network interface is not virtual
* fix #723: check debian linux version in /etc/debian_version
* hdparm support fixes by, thanks to po1vo
* win32: fix software inventory failing due to unsupported UTF-16 Appx manifest XML
* improved HP storage support, thanks to po1vo
* fix minor edid parsing issue
* linux: fix downed network interface speed, thanks to po1vo
* linux: enhanced generic SCSI storage support, thanks to po1vo
* linux: added process to enhance storage support testing
* Updated pci.ids to 2019.11.10 version
* Updated usb.ids to 2019.11.05 version

netdiscovery/netinventory:
* linux: avoid to share HTTP client with threads to fix RHEL/CentOS 7 crash