@@ -24,6 +24,9 @@ disabled = yes
 #maxrate        = 30
 #maxrate_period = 3600
 
+# The maximum number of forked handled request
+#max_proxy_threads = 10
+
 # You should create and define you specific parameter in the following
 # included configuration file to override any default.
 # For example just set "disabled = no" in it to enable the plugin
